[metadata]
name = co:bash
url = https://github.com/alexOarga/co-bash
version = 0.0.1
author = Alex Oarga
author_email = alex718123@gmail.com
long_description = file: README.md, CHANGELOG.rst, LICENSE
long_description_content_type = text/markdown
;keywords = one, two
license = Apache-2.0 license
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
python_requires = >=3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cohere
    setuptools

[options.entry_points]
console_scripts =
    co = co.entrypoint:co
